[gd_scene load_steps=5 format=3 uid="uid://brpavu0ocrgcq"]

[ext_resource type="Script" path="res://widgets/top_navigation_bar/top_navigation_bar.gd" id="1_gpvf2"]
[ext_resource type="Texture2D" uid="uid://u2ei6hl1xxaq" path="res://assets/icons/Icon_Small_Blank_Arrow.png" id="1_ygun5"]
[ext_resource type="Texture2D" uid="uid://c7bpp43qq54rv" path="res://assets/icons/Icon_X.png" id="3_7iktk"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_yautv"]

[node name="HBoxContainer" type="HBoxContainer"]
custom_minimum_size = Vector2(0, 100)
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 90.0
grow_horizontal = 2
script = ExtResource("1_gpvf2")

[node name="BackButtonContainer" type="MarginContainer" parent="."]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 20

[node name="TextureRect" type="TextureRect" parent="BackButtonContainer"]
custom_minimum_size = Vector2(90, 70)
layout_mode = 2
size_flags_horizontal = 4
texture = ExtResource("1_ygun5")
expand_mode = 1
flip_h = true

[node name="BackButton" type="Button" parent="BackButtonContainer/TextureRect"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/focus = SubResource("StyleBoxEmpty_yautv")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_yautv")
theme_override_styles/hover = SubResource("StyleBoxEmpty_yautv")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_yautv")
theme_override_styles/normal = SubResource("StyleBoxEmpty_yautv")

[node name="title" type="Label" parent="."]
unique_name_in_owner = true
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_font_sizes/font_size = 50
text = "adadasd"
horizontal_alignment = 1
autowrap_mode = 2

[node name="CloseButtonContainer" type="MarginContainer" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 30

[node name="TextureRect" type="TextureRect" parent="CloseButtonContainer"]
custom_minimum_size = Vector2(90, 70)
layout_mode = 2
size_flags_horizontal = 4
texture = ExtResource("3_7iktk")
expand_mode = 1
flip_h = true

[node name="CloseButton" type="Button" parent="CloseButtonContainer/TextureRect"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/focus = SubResource("StyleBoxEmpty_yautv")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_yautv")
theme_override_styles/hover = SubResource("StyleBoxEmpty_yautv")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_yautv")
theme_override_styles/normal = SubResource("StyleBoxEmpty_yautv")
